[ES-2393] Mock plugin java11 to java21 migration (#176)
* initial PR mock plugin for java21 migration

Signed-off-by: Md-Humair-KK <mdhumair.kankudti@gmail.com>

* java 21 migration

Signed-off-by: Md-Humair-KK <mdhumair.kankudti@gmail.com>

* java 21 migration

Signed-off-by: Md-Humair-KK <mdhumair.kankudti@gmail.com>

* solved review comments

Signed-off-by: Md-Humair-KK <mdhumair.kankudti@gmail.com>

* solved review comments

Signed-off-by: Md-Humair-KK <mdhumair.kankudti@gmail.com>

* reverted test case changes

Signed-off-by: Md-Humair-KK <mdhumair.kankudti@gmail.com>

* verifier test class reverted

Signed-off-by: Md-Humair-KK <mdhumair.kankudti@gmail.com>

* removed spring boot and web dependencies

Signed-off-by: Md-Humair-KK <mdhumair.kankudti@gmail.com>

* removed spring boot and web dependencies

Signed-off-by: Md-Humair-KK <mdhumair.kankudti@gmail.com>

* fixed target release failure

Signed-off-by: Md-Humair-KK <mdhumair.kankudti@gmail.com>

---------

Signed-off-by: Md-Humair-KK <mdhumair.kankudti@gmail.com>