@@ -67,32 +67,31 @@
 	</distributionManagement>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- maven -->
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
-		<maven.compiler.version>3.8.0</maven.compiler.version>
-		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
-		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
-		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
-		<maven.jacoco.version>0.8.5</maven.jacoco.version>
-		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
-		<maven.javadoc.version>3.2.0</maven.javadoc.version>
-		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+		<maven.compiler.version>3.14.1</maven.compiler.version>
+		<maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
+		<maven.war.plugin.version>3.5.0</maven.war.plugin.version>
+		<maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
+		<maven.jacoco.version>0.8.14</maven.jacoco.version>
+		<maven.sonar.plugin.version>3.9.1.2184</maven.sonar.plugin.version>
+		<maven.javadoc.version>3.4.0</maven.javadoc.version>
+		<maven-shade-plugin.version>3.5.0</maven-shade-plugin.version>
 
-		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
-		<spring.boot.version>2.3.6.RELEASE</spring.boot.version>
+		<spring-cloud.version>2023.0.8</spring-cloud.version>
+		<spring.boot.version>3.2.12</spring.boot.version>
 
-		<kernel-keymanager-service.version>1.2.2.0-SNAPSHOT</kernel-keymanager-service.version>
-		<esignet.version>1.7.0-SNAPSHOT</esignet.version>
-		<esignet-signup.version>1.3.0-SNAPSHOT</esignet-signup.version>
+		<kernel-keymanager-service.version>1.3.0-beta.4</kernel-keymanager-service.version>
+		<esignet.version>1.7.1-SNAPSHOT</esignet.version>
+		<esignet-signup.version>1.3.1-SNAPSHOT</esignet-signup.version>
 
 		<sonar.exclusions>**/dto/**,**/entity/**,**/exception/**,**/spi/**,**/advice/**,**/config/**</sonar.exclusions>
 		<sonar.cpd.exclusions>**/dto/**,**/entity/**,**/config/**</sonar.cpd.exclusions>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -104,7 +103,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.22</version>
+			<version>1.18.42</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -145,6 +144,12 @@
 			<artifactId>signup-integration-api</artifactId>
 			<version>${esignet-signup.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.20.0</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -260,7 +265,6 @@
 					<skip>false</skip>
 					<argLine>
 						${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
-						--illegal-access=permit
 					</argLine>
 				</configuration>
 			</plugin>
